# django-catalog-project

./: .env  .env_sample  .gitignore  README.md  pyproject.toml  requirements.txt
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_detail.html  post_form.html  post_list.html
catalog/: forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py  create_groups.py  csu.py
catalog/migrations/: 0001_initial.py  0002_product_views_counter_alter_product_price.py  0003_remove_product_views_counter.py  0004_product_owner_alter_product_image_and_more.py  0005_alter_product_options.py  0006_product_status.py
catalog/newapp/: urls.py
catalog/templates/: contacts.html  home.html  product_list.html  products_list.html
catalog/templates/Includes/: inc_menu.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/Includes/: inc_menu.html
config/: settings.py  urls.py
newapp/: urls.py  views.py
unusual/: models.py  views.py
unusual/templates/blog/: blog_detail.html  blog_list.html
users/: urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
