[tool.poetry]
name = "homework django first"
version = "0.1.0"
description = ""
authors = ["EvgeniyRibakov <evgenijrybakov01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
